# PokerFace

./: LICENSE  package-lock.json
Development/: .cursorrules  package-lock.json
Development/CoinFlipGame/off-chain/: next.config.js  package.json
Development/CoinFlipGame/off-chain/src/components/: NFTMinter.tsx
Development/CoinFlipGame/off-chain/src/pages/: index.tsx
Development/CoinFlipGame/off-chain/src/types/: plutus.d.ts
Development/CoinFlipGame/on-chain/: .gitignore  build_log.txt  plutus-tx-template.cabal
Development/CoinFlipGame/on-chain/app/: CoinFlipGameBlueprint.hs  HousePotBlueprint.hs  NFT3Blueprint.hs  NFTThreeBlueprint.hs  NFTThreeBlueprint2.hs  VRFHolderBlueprint.hs
Development/CoinFlipGame/on-chain/compiled/: nft-three-policy.plutus  nft-three-policyV3Lace.plutus  nft-three-policyV3LaceNami.plutus
Development/CoinFlipGame/on-chain/nix/: shell.nix
Development/CoinFlipGame/on-chain/src/: CoinFlipGame.hs  HousePot.hs  NFT3s.hs  NFTThree.hs  VRFHolder.hs
Development/HighLowGame/off-chain/: package.json
Development/HighLowGame/off-chain/src/pages/: index.tsx
Development/HighLowGame/on-chain/: .gitignore  cabal.project  plutus-tx-template.cabal
Development/HighLowGame/on-chain/app/: HighLowGameBlueprint.hs
Development/HighLowGame/on-chain/src/: HLGBetGuess.hs
Development/HighLowGame/on-chain/test/: HighLowGameTests.hs
Development/examples/: Combined Plutus 1.38.0.0 Documentation.htm
