cabal-version:   3.0
name:            plutus-tx-template
version:         0.5.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common common-all
    build-depends:    base 
                    , plutus-core ^>=1.38.0.0
                    , plutus-ledger-api 
                    , plutus-tx 

                    
    if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin

    ghc-options: -Wall
    default-language: Haskell2010

library CoinFlipGame
  import:         common-all
  hs-source-dirs: src
  exposed-modules:
    CoinFlipGame
    HousePot
    VRFHolder
    NFT3s

-- executable Compiler
--   import:         common-all
--   build-depends:   bytestring
--                   , containers
--                   , NFT3s
--   hs-source-dirs: app
--   main-is:        NFT3Blueprint.hs


-- common common-all-test
--     import:         common-all
--     build-depends:  QuickCheck
--                     , tasty

-- test-suite HighLowGameTest
--     -- Import common warning flags.
--     import:           common-all-test

--     -- Base language which the package is written in.
--     default-language: Haskell2010

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

--     -- The interface type and version of the test suite.
--     type:             exitcode-stdio-1.0

--     -- Directories containing source files.
--     hs-source-dirs:   test

--     -- The entrypoint to the test suite.
--     main-is:          HighLowGameTest.hs

--     -- Test dependencies.
--     build-depends:
--         base ^>=4.18.2.1,
--         HighLowGame
